--- a/index.html
+++ b/index.html
@@ -19,6 +19,30 @@
 
 </head>
 <body>
+<!-- Start : Menu -->
+    <header>
+        <nav class="navbar">
+            <div class="navbar-container container">
+                <input type="checkbox" name="" id="">
+                <div class="hamburger-lines">
+                    <span class="line line1"></span>
+                    <span class="line line2"></span>
+                    <span class="line line3"></span>
+                </div>
+                <ul class="menu-items">
+                    <li><a href="index.html">Accueil</a></li>
+                    <li><a href="#">Notre mission</a></li>
+                    <li><a href="#">Actualités</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+                <a href="index.html"><img class="logo" 
+                src="images/index/logo.svg"
+                alt="logo l'artisan d'art"/></a>
+            </div>
+        </nav>
+    </header>
+<!-- End : Menu -->
+
 
 </body>
 </html>
