.html(first-section) .css(first-section, media-query) images(cover-mobile, cover-desktop)

--- a/index.html
+++ b/index.html
@@ -43,6 +43,17 @@
     </header>
 <!-- End : Menu -->
 
+    <main>
 
+    <!-- Start : First section -->
+       <section class="cover background">
+           <div class="cover__title"> 
+               <h1>L'artisan <span>D'ART</span></h1>
+               <p>L'association qui met en valeur les savoir-faire et les métiers</p>
+          </div>  
+       </section>
+    <!-- End : First section -->
+
+    </main>
 </body>
 </html>
