.html=(section-2) .css=(section-2, media query) images=(établi-artisan)

--- a/index.html
+++ b/index.html
@@ -54,6 +54,50 @@
        </section>
     <!-- End : First section -->
 
+    <!-- Start : second section -->
+        <section class="section-2">	
+
+            <!-- start : image en version desktop uniquement-->
+            <div class="section-2__container-image">
+              <img class="section-2__image-desktop" src="images/index/section2-image.jpg" alt="établi de travail artisan">
+            </div>
+            <!-- End :image en version desktop uniquement-->
+
+            <div class="section-2__container">
+                <h2 class="section-2__title">Un artisan d’art - <strong>C'est quoi ?</strong></h2>
+            
+             <!-- start : image en version mobile uniquement-->
+                 <img class="section-2__image-mobile" src="images/index/section2-image.jpg" alt="établi de travail artisan">
+             <!-- End :image en version mobile uniquement-->
+
+                <div class="section-2__container-text">
+                     <p>
+                        L'artisan d'art est un professionnel qui exerce une activité artisanale
+                          comprise dans la liste des métiers d'art annexée à <span>l'arrêté du 24 décembre 2015.</span>
+                    </p>
+                    <ul>
+                        <li class="section-2__container-text-li"><strong>Avoir la qualité d'artisan d'art</strong></li>
+                    </ul>
+                    <p>
+                        Il faut exercer un métier mentionné dans la liste fixée par <span>l'arrêté du 24 décembre 2015</span> et de : <br><br>
+                        - soit être titulaire d'un CAP, d'un BEP ou d'un titre équivalent<br>
+                        - soit justifier d'une expérience professionnelle de 3 ans au moins dans ce métier
+                    </p>
+                    <ul>
+                        <li class="section-2__container-text-li"><strong>Avoir le titre de maître artisan en métier d'art</strong></li>
+                    </ul>
+                    <p>
+                        Le titre de maître artisan en métier d'art est attribué par le président de la chambre 
+                        de métiers et de l'artisanat (CMA) <br>
+                        Ce titre peut également être attribué sans être titulaire du brevet de maîtrise il faut :<br><br>
+                        - soit justifie d'un diplôme de niveau équivalent au Brevet de Maîtrise<br>
+                        - soit est immatriculé au répertoire des métiers depuis au moins 10 ans.
+                    </p>
+                 </div>
+             </div>
+        </section>
+    <!-- End : Second section -->
+
     </main>
 </body>
 </html>
