.html=(section-3) .css=(section-3, media query) videos=(soufleur-de-verre)

--- a/index.html
+++ b/index.html
@@ -98,6 +98,39 @@
         </section>
     <!-- End : Second section -->
 
+    <!-- Start : Third section -->
+        <section class="section-3">
+            <div class="section-3__title">
+                <h2>
+                    <strong>Artisan d'art</strong>, les artistes de la main
+                </h2>
+                <div></div>
+            </div>	
+            <div class="section-3__container">		
+                <div class="section-3__container-text">
+                    <p>
+                        <strong>Artistes ou artisans ?</strong> la frontière est mince.<br><br>
+                        Certains créateurs que nous avons 
+                        rencontrés nous ont confié qu’ils n’aimaient pas « être mis 
+                        dans des cases ». <br>
+                        Ils se considèrent avant tout comme des 
+                        « artistes de la main ».<br><br>
+                        Par exemple, le souffleuse de verre 
+                        Jean Van Den Bosch se nomme à sa façon : « travailleur 
+                        manuel créative ». En revanche, d’autres se
+                        retrouvent clairement dans l’appellation «<strong>artisan d’art</strong> ».
+                    </p>
+                </div>	
+                
+                <div div class="section-3__container-video ">
+                    <video autoplay muted playsinline loop controls="true">
+                        <source type="video/mp4" src="videos/soufleur-de-verre.mp4"/>
+                    </video>
+                </div> 
+            </div>
+        </section>
+	<!-- End : Third section -->
+
     </main>
 </body>
 </html>
