.html=(section-4) .css=(section-4, media-query) images=(2xaffiche)

--- a/index.html
+++ b/index.html
@@ -131,6 +131,20 @@
         </section>
 	<!-- End : Third section -->
 
+    <!-- Start : Fourth section -->
+    <section class="section-4">
+        <div class="section-4__container">
+            <div class="section-4__container-text">
+                <h2>Dernières actualités</h2>
+            </div>
+            <div class="section-4__container-images">
+                <a href="#"><img class="section-4__link" src="images/index/affiche-forum-des-activités.jpg" alt="affiche événement rencontre avec des artisans"></a>
+                <a href="#"><img class="section-4__link" src="images/index/affiche-la-boutique-des-créateurs.jpg" alt="affiche événement rencontre avec des artisans"></a>
+            </div>
+        </div>
+    </section> 
+    <!-- End : Fourth section -->
+
     </main>
 </body>
 </html>
