.html=(section-5) .css=(background, section-5, media-query) images=(background section-5)

--- a/index.html
+++ b/index.html
@@ -145,6 +145,17 @@
     </section> 
     <!-- End : Fourth section -->
 
+     <!-- Start : Fifth section -->
+     <section class="section-5 background">
+        <div class="section-5__container">
+            <h2>Nos artisans</h2>
+            <div class="section-5__container-link">
+                <a href="#">Découvrir</a>
+            </div>
+        </div>
+    </section> 
+    <!-- End : Fifth section -->
+
     </main>
 </body>
 </html>
