.html=(section-6) .css=(section-6, media-query)

--- a/index.html
+++ b/index.html
@@ -156,6 +156,26 @@
     </section> 
     <!-- End : Fifth section -->
 
+    <!-- Start : Sixth section -->
+    <section class="section-6__container">
+        <h2>Abonne-toi à notre liste</h2>
+        <p>Soit le premier informé de nos dernières actus</p>
+        <form method="get" action="" class="section-6__container-form">
+            <div class="section-6__box">
+                <input type="text" name="username" required>
+                <label>Nom</label>
+            </div>
+            <div class="section-6__box">
+                <input type="email" name="email" required>
+                <label>E-mail*</label>
+            </div>
+            <button type="submit">S'abonner</button>	
+        </form>
+    </section> 
+<!-- End : Fifth section -->
+
+    
+
     </main>
 </body>
 </html>
