.html=(footer) .css=(footer, media-query) images=(icones footer)

--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
     </section> 
     <!-- End : Fourth section -->
 
-     <!-- Start : Fifth section -->
+    <!-- Start : Fifth section -->
      <section class="section-5 background">
         <div class="section-5__container">
             <h2>Nos artisans</h2>
@@ -172,10 +172,26 @@
             <button type="submit">S'abonner</button>	
         </form>
     </section> 
-<!-- End : Fifth section -->
+    <!-- End : Fifth section -->
 
-    
+</main>   
 
-    </main>
+    <footer class="footer">
+        <div class="footer__info">
+            <a href="#">info@lartisandart.org</a>
+        </div>
+        <div class="footer__network">
+            <a href="#"><img src="images/index/facebook.png"></a>
+            <a href="#"><img src="images/index/twitter.png"></a>
+            <a href="#"><img src="images/index/youtube.png"></a>
+        </div>
+        <div class="footer__mention">
+            <a href="#">Politique de cookies</a>
+            <a href="#">Politique de confidentialité</a>
+            <a href="#">Mention légales</a>
+        </div>
+        <p class="footer__made">© 2022 par Hatim, Developpeur Web Junior. Studi School</p>
+    </footer> 
+
 </body>
 </html>
