--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <ul class="menu-items">
                     <li><a href="index.html">Accueil</a></li>
                     <li><a href="#">Notre mission</a></li>
-                    <li><a href="#">Actualités</a></li>
+                    <li><a href="actualités.html">Actualités</a></li>
                     <li><a href="#">Contact</a></li>
                 </ul>
                 <a href="index.html"><img class="logo" 
