.html=(section-actualite) .css=(section-actualte, media-query) images=(2xaffiches, cover)

--- a/actualités.html
+++ b/actualités.html
@@ -45,6 +45,32 @@
 <!-- End : Menu -->
 
     <main>
+    <!-- Start : First section -->   
+        <section class="actualite">
+            <div class="actualite__container">
+                <div class="actualite__container-text">
+                    <h2>Dernières actualités</h2>
+                </div>
+                <div class="actualite__container-images">
+                    <div class="actualite__link">
+                        <a href="forum-des-activités.html">
+                            <img class="actualite__image" src="images/actualités/actualités-forum.jpg" alt="affiche événement rencontre artisan">
+                            <p>En savoir +</p>
+                        </a>
+                    </div>
+                    <div class="actualite__link">
+                        <a href="la-boutique-des-créateurs.html">
+                            <img class="actualite__image" src="images/actualités/actualités-boutique.jpg" alt="affiche événement rencontre artisan">
+                            <p>En savoir +</p>
+                        </a>
+                    </div>
+                    
+                </div>
+            </div>
+        </section>  
+    <!-- End : First section -->
+
+
     </main>
 
 </body>
