--- a/actualités.html
+++ b/actualités.html
@@ -70,8 +70,24 @@
         </section>  
     <!-- End : First section -->
 
-
     </main>
+
+    <footer class="footer">
+        <div class="footer__info">
+            <a href="#">info@lartisandart.org</a>
+        </div>
+        <div class="footer__network">
+            <a href="#"><img src="images/index/facebook.png"></a>
+            <a href="#"><img src="images/index/twitter.png"></a>
+            <a href="#"><img src="images/index/youtube.png"></a>
+        </div>
+        <div class="footer__mention">
+            <a href="#">Politique de cookies</a>
+            <a href="#">Politique de confidentialité</a>
+            <a href="#">Mention légales</a>
+        </div>
+        <p class="footer__made">© 2022 par Hatim, Developpeur Web Junior. Studi School</p>
+    </footer> 
 
 </body>
 </html>
