.html=(section-actuality) .css=(section-actuality, media-query) images=(banniere, images pour affiche)

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
                 <h2>Dernières actualités</h2>
             </div>
             <div class="section-4__container-images">
-                <a href="#"><img class="section-4__link" src="images/index/affiche-forum-des-activités.jpg" alt="affiche événement rencontre avec des artisans"></a>
+                <a href="forum-des-activités.html"><img class="section-4__link" src="images/index/affiche-forum-des-activités.jpg" alt="affiche événement rencontre avec des artisans"></a>
                 <a href="#"><img class="section-4__link" src="images/index/affiche-la-boutique-des-créateurs.jpg" alt="affiche événement rencontre avec des artisans"></a>
             </div>
         </div>
