.html=(section-actuality) .css(section-actuality, media-query) images(banniere, images affiche)

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
             </div>
             <div class="section-4__container-images">
                 <a href="forum-des-activités.html"><img class="section-4__link" src="images/index/affiche-forum-des-activités.jpg" alt="affiche événement rencontre avec des artisans"></a>
-                <a href="#"><img class="section-4__link" src="images/index/affiche-la-boutique-des-créateurs.jpg" alt="affiche événement rencontre avec des artisans"></a>
+                <a href="la-boutique-des-créateurs.html"><img class="section-4__link" src="images/index/affiche-la-boutique-des-créateurs.jpg" alt="affiche événement rencontre avec des artisans"></a>
             </div>
         </div>
     </section> 
