modif image cover-mobile

--- a/actualités.html
+++ b/actualités.html
@@ -86,7 +86,7 @@
             <a href="#">Politique de confidentialité</a>
             <a href="#">Mention légales</a>
         </div>
-        <p class="footer__made">© 2022 par Hatim, Developpeur Web Junior. Studi School</p>
+        <p class="footer__made">© 2022 par Hatim Mfarej, Developpeur Web Junior. Studi School</p>
     </footer> 
 
 </body>
