--- a/index.html
+++ b/index.html
@@ -89,9 +89,9 @@
                     <p>
                         Le titre de maître artisan en métier d'art est attribué par le président de la chambre 
                         de métiers et de l'artisanat (CMA) <br>
-                        Ce titre peut également être attribué sans être titulaire du brevet de maîtrise il faut :<br><br>
-                        - soit justifie d'un diplôme de niveau équivalent au Brevet de Maîtrise<br>
-                        - soit est immatriculé au répertoire des métiers depuis au moins 10 ans.
+                        Ce titre peut également être attribué sans être titulaire du brevet de maîtrise. Pour cela il faut :<br><br>
+                        - soit justifier d'un diplôme de niveau équivalent au Brevet de Maîtrise<br>
+                        - soit être immatriculé au répertoire des métiers depuis au moins 10 ans.
                     </p>
                  </div>
              </div>
@@ -158,8 +158,8 @@
 
     <!-- Start : Sixth section -->
     <section class="section-6__container">
-        <h2>Abonne-toi à notre liste</h2>
-        <p>Soit le premier informé de nos dernières actus</p>
+        <h2>Abonnez-vous à notre liste</h2>
+        <p>Soyez le premier informé de nos dernières actus</p>
         <form method="get" action="" class="section-6__container-form">
             <div class="section-6__box">
                 <input type="text" name="username" required>
@@ -190,7 +190,7 @@
             <a href="#">Politique de confidentialité</a>
             <a href="#">Mention légales</a>
         </div>
-        <p class="footer__made">© 2022 par Hatim, Developpeur Web Junior. Studi School</p>
+        <p class="footer__made">© 2022 par Hatim Mfarej, Developpeur Web Junior. Studi School</p>
     </footer> 
 
 </body>
