--- a/la-boutique-des-créateurs.html
+++ b/la-boutique-des-créateurs.html
@@ -74,7 +74,7 @@
                     Nous sommes actuellement en pleine préparation à l’ouverture d’une boutique permanente.<br><br>
                     Pour que vous puissiez avoir accès facilement aux créations des artisans d’art et créateurs de la région, cette boutique rassemblera leurs plus belles créations. <br><br>
                     Vous y découvrirez des idées cadeaux, pour toutes les occasions. Vous y trouverez des prix accessibles à tous, il y en aura pour tous les styles et pour toutes les bourses.<br><br>
-                    Nous vous proposerons une offre produits variée qui se renouvellera régulièrement afin de vous proposer un large choix et toujours plus de nouveauté ! <br><br>
+                    Nous vous proposerons une offre produits variée qui se renouvellera régulièrement afin de vous proposer un large choix et toujours plus de nouveautés ! <br><br>
                     <span><strong>Ouverture le samedi 12 septembre 2020</strong></span> 
                 </p>
             </div>
@@ -148,7 +148,7 @@
         <a href="#">Politique de confidentialité</a>
         <a href="#">Mention légales</a>
     </div>
-    <p class="footer__made">© 2022 par Hatim, Developpeur Web Junior. Studi School</p>
+    <p class="footer__made">© 2022 par Hatim Mfarej, Developpeur Web Junior. Studi School</p>
 </footer> 
     
 </body>
