Mise à jour des informations

--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
 	<link rel="icon" type="image/png" href="images/index/icon-32.png"/>
 	<link rel="stylesheet" href="css/style.css">
 	<link rel="stylesheet" href="css/reset.css">
-
 </head>
+
 <body>
 <!-- Start : Menu -->
     <header>
         <nav class="navbar">
             <div class="navbar-container container">
-                <input type="checkbox" name="" id="">
+                <input type="checkbox">
                 <div class="hamburger-lines">
                     <span class="line line1"></span>
                     <span class="line line2"></span>
@@ -31,9 +31,7 @@
                 </div>
                 <ul class="menu-items">
                     <li><a href="index.html">Accueil</a></li>
-                    <li><a href="#">Notre mission</a></li>
                     <li><a href="actualités.html">Actualités</a></li>
-                    <li><a href="#">Contact</a></li>
                 </ul>
                 <a href="index.html"><img class="logo" 
                 src="images/index/logo.svg"
@@ -178,7 +176,7 @@
 
     <footer class="footer">
         <div class="footer__info">
-            <a href="#">info@lartisandart.org</a>
+            <a href="#">infos@lartisandart.com</a>
         </div>
         <div class="footer__network">
             <a href="#"><img src="images/index/facebook.png"></a>
@@ -190,7 +188,7 @@
             <a href="#">Politique de confidentialité</a>
             <a href="#">Mention légales</a>
         </div>
-        <p class="footer__made">© 2022 par Hatim Mfarej, Developpeur Web Junior. Studi School</p>
+        <p class="footer__made">© 2022 par Hatim M, Developpeur Web Junior. Studi School</p>
     </footer> 
 
 </body>
