--- a/la-boutique-des-créateurs.html
+++ b/la-boutique-des-créateurs.html
@@ -32,9 +32,7 @@
                 </div>
                 <ul class="menu-items">
                     <li><a href="index.html">Accueil</a></li>
-                    <li><a href="#">Notre mission</a></li>
                     <li><a href="actualités.html">Actualités</a></li>
-                    <li><a href="#">Contact</a></li>
                 </ul>
                 <a href="index.html"><img class="logo" 
                 src="images/index/logo.svg"
@@ -136,7 +134,7 @@
 
 <footer class="footer">
     <div class="footer__info">
-        <a href="#">info@lartisandart.org</a>
+        <a href="#">infos@lartisandart.com</a>
     </div>
     <div class="footer__network">
         <a href="#"><img src="images/index/facebook.png"></a>
@@ -148,7 +146,7 @@
         <a href="#">Politique de confidentialité</a>
         <a href="#">Mention légales</a>
     </div>
-    <p class="footer__made">© 2022 par Hatim Mfarej, Developpeur Web Junior. Studi School</p>
+    <p class="footer__made">© 2022 par Hatim M, Developpeur Web Junior. Studi School</p>
 </footer> 
     
 </body>
